RESOLVED FIXED62588
BankID plug-in isn't instantiated correctly
https://bugs.webkit.org/show_bug.cgi?id=62588
Summary BankID plug-in isn't instantiated correctly
Anders Carlsson
Reported 2011-06-13 13:03:53 PDT
BankID plug-in isn't instantiated correctly
Attachments
Patch (2.80 KB, patch)
2011-06-13 13:05 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2011-06-13 13:05:47 PDT
Anders Carlsson
Comment 2 2011-06-13 13:08:00 PDT
Note You need to log in before you can comment on or make changes to this bug.